--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
 
    <dependencies>
 
+       <dependency>
+           <groupId>commons-beanutils</groupId>
+           <artifactId>commons-beanutils</artifactId>
+           <version>1.8.3</version>
+       </dependency>
+
       <!-- Import the CDI API, we use provided scope as the API is included 
          in JBoss AS 7 -->
       <dependency>
@@ -85,8 +91,6 @@
             <artifactId>maven-war-plugin</artifactId>
             <version>2.1.1</version>
             <configuration>
-               <!-- Java EE 6 doesn't require web.xml, Maven needs to catch
-                  up! -->
                <failOnMissingWebXml>false</failOnMissingWebXml>
             </configuration>
          </plugin>
