--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
            <artifactId>javaee-api</artifactId>
            <version>6.0</version>
        </dependency>
+       
+       <dependency>
+           <groupId>commons-beanutils</groupId>
+           <artifactId>commons-beanutils</artifactId>
+           <version>1.8.3</version>
+       </dependency>
    </dependencies>
 
    <build>
